Add suport for image endpoints
